[package]
name = "poseidon"
version = "0.28.1"
description = "Implementation of Poseidon hash algorithm over the Bls12-381 Scalar field."
categories = ["algorithms", "cryptography", "no-std", "wasm"]
keywords = ["cryptography", "zero-knowledge", "crypto"]

repository = "https://github.com/dusk-network/poseidon252"
authors = [
    "zer0 <matteo@dusk.network>",
    "vlopes11 <victor@dusk.network>",
    "CPerezz <carlos@dusk.network>",
    "Kristoffer Ström <kristoffer@dusk.network>",
    "Eduardo Leegwater Simões <eduardo@dusk.network>",
    "Moana Marcello <moana@dusk.network>",
]
edition = "2021"
license = "MPL-2.0"

[dependencies]
bls12_381 = { version = "0.8.0", default-features = false }
jubjub = { version = "0.10.0", default-features = false }
bytes = "1.4.0"
hades = { git = "https://github.com/iquerejeta/Hades252.git" }
microkelvin = { version = "0.17", optional = true }
nstack = { version = "0.16", optional = true }
ranno = { version = "0.1", optional = true }
bytecheck = { version = "0.6", optional = true, default-features = false }

[dev-dependencies]
criterion = "0.3"
ff = "0.13.0"
rand = { version = "0.8", default-features = false, features = ["getrandom", "std_rng"] }

[features]
default = [
    "microkelvin",
    "nstack",
    "ranno",
]

[profile.dev]
opt-level = 3
debug = false
rpath = false
lto = false
debug-assertions = false
codegen-units = 16
panic = 'unwind'
incremental = false
overflow-checks = false

[profile.release]
debug = false
panic = 'abort'
lto = true
incremental = false
codegen-units = 1

[[bench]]
name = "merkle"
harness = false
